<resources>
    <string name="app_name">Ana Online</string>
    <string name="text_login">Login</string>
    <string name="text_login_npa">Masukkan NPA Anda</string>
    <string name="text_login_password">Masukkan Password Anda</string>
    <string name="text_login_forgot_password">lupa Password?</string>
    <string name="text_login_footer">By PP Pemuda Persis @ 2020</string>
    <string name="text_login_register">Daftar</string>
    <string name="text_btn_login">Login</string>
    <string name="text_npa_empty">NPA wajib diisi</string>
    <string name="text_password_empty">Password wajib diisi</string>

    <string name="text_npa">NPA</string>
    <string name="text_cek_npa">Cek NPA</string>
    <string name="text_already_account">Sudah punya akun?</string>
    <string name="text_login_here">Login disini</string>
    <string name="text_nama">Nama</string>
    <string name="text_email">Email</string>
    <string name="text_kirim_email">Kirim Email</string>

    <!-- String dashboard -->
    <string name="text_name_greeting">Hi, %s</string>
    <string name="text_greeting_not_complete">Datamu belum lengkap. Isi di menu </string>
    <string name="text_setting">Setting</string>
    <string name="text_pemuda_persis">Pemuda Persis</string>

    <!-- String wizard -->
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="data_anggota">Data Anggota</string>
    <string name="data_keanggotaan">Data Keanggotaan</string>
    <string name="data_alamat">Data Alamat</string>
    <string name="data_kontak">Data Kontak</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="data_pendidikan">Data Pendidikan</string>
    <string name="data_organisasi">Data Organisasi</string>
    <string name="data_tafiq">Data Tafiq</string>

    <string name="text_anggota_tersiar">Anggota Tersiar</string>
    <string name="text_anggota_biasa">Anggota Biasa</string>
    <string name="text_pj">PJ</string>
    <string name="text_pc">PC</string>
    <string name="text_pd">PD</string>
    <string name="text_pw">PW</string>
    <string name="text_data_performa">Data Performa</string>
    <string name="text_data_monografi">Data Monografi</string>
    <string name="text_anggota">Anggota</string>
    <string name="text_user">User</string>
    <string name="tvToolbarTitle">Detail \'Bagas\'</string>
    <string name="threeDots">⋮</string>
    <string name="menu">menu</string>
    <string name="kontak">Kontak</string>

    <!-- String detail activity -->
    <string name="dataAnggota">Data Anggota</string>
    <string name="foto">Foto</string>
    <string name="name">Nama :</string>
    <string name="place_birth">Tempat Lahir :</string>
    <string name="date_birth">Tanggal Lahir :</string>
    <string name="blood_type">Golongan Darah :</string>
    <string name="status">Status :</string>
    <string name="npa">NPA :</string>
    <string name="npa_data">99.0101</string>
    <string name="name_data">Bagas Kara</string>
    <string name="place_birth_data">Majalengka, Kab</string>
    <string name="date_birth_data">01 Agustus 1990</string>
    <string name="blood_type_data">A</string>
    <string name="status_data">Single</string>
    <string name="alamat">Alamat :</string>
    <string name="pimpinan_jamaah">Pimpinan Jamaah :</string>
    <string name="pimpinan_cabang">Pimpinan Cabang :</string>
    <string name="pimpinan_daerah">Pimpinan Daerah :</string>
    <string name="pimpinan_wilayah">Pimpinan Wilayah :</string>
    <string name="pendaftaran_anggota">Pendaftaran Anggota :</string>
    <string name="masa_aktif_kta">Masa Aktif KTA :</string>
    <string name="email">Email :</string>
    <string name="no_telpon">No. Telpon :</string>
    <string name="jurusan">Jurusan :</string>
    <string name="instansi">Instansi :</string>
    <string name="jenis">Jenis :</string>
    <string name="tahun">Tahun :</string>
    <string name="data_jamiyyah">Data Jamiyyah</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="hubungan">Hubungan :</string>

    <string name="informasi">Kami akan mengirimkan link verifikasi ke email anda yang terdaftar</string>
</resources>